tests/valid/trait/method_call_explicit_ufcs_local_annotated_generic_empty_enum_constructor_receiver.facet
enum Job<T> {
  Ready
}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Job<unrestricted isize> {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  let x: unrestricted Job<unrestricted isize> = Job<unrestricted isize>::Ready();
  (<unrestricted Job<unrestricted isize> as Runner>::run x)
}
